--- a/Boutiqaat/View/Base.lproj/Main.storyboard
+++ b/Boutiqaat/View/Base.lproj/Main.storyboard
@@ -17,9 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mCK-V8-iJy">
-                                <rect key="frame" x="87" y="363" width="240" height="128"/>
+                                <rect key="frame" x="108" y="589" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="CuG-CN-o83" appends="YES" id="z62-aG-38P"/>
+                                </connections>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -27,6 +31,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="CuG-CN-o83"/>
             </objects>
             <point key="canvasLocation" x="-26.086956521739133" y="99.776785714285708"/>
         </scene>
